--- a/salt/roots/salt/nginx/nginx.conf
+++ b/salt/roots/salt/nginx/nginx.conf
@@ -67,7 +67,11 @@ http {
             proxy_connect_timeout 90;
             proxy_send_timeout 600;
             proxy_read_timeout 600;
+
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
 
             expires epoch;
             add_header Vary *;
